feat: now user can register his own store by himself

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,11 @@ en:
   spree:
     order_already_updated: "Order already updated."
     about: "About"
-    suppliers: "Suppliers"
-    supplier_has_no_description: "Supplier has no description"
-    no_suppliers_found: "No suppliers found"
+    suppliers: "Sellers"
+    supplier_has_no_description: "Seller has no description"
+    no_suppliers_found: "No sellers found"
+    supplier: "Seller"
+    my_shop: "My Store"
+    new_shop: "New Store"
+    create_shop: "Create your own store"
+    send_request_to_create_store: "Send request"
