feat: product belongs only one supplier

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,6 @@ en:
     supplier_has_no_description: "Seller has no description"
     no_suppliers_found: "No sellers found"
     supplier: "Seller"
-    my_shop: "My Store"
-    new_shop: "New Store"
-    create_shop: "Create your own store"
-    send_request_to_create_store: "Send request"
+    my_store: "My Store"
+    new_store: "New Store"
+    create_store: "Create a store"
